
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int buffer; } ;


 TYPE_1__ g_proc_reader ;
 int leak_parse (int ,int,char**,char**) ;
 int proc_read (TYPE_1__*,char*) ;

__attribute__((used)) static void leak_once(char **start, char **end) {
 int read_size = proc_read(&g_proc_reader, "/proc/self/timers");
 leak_parse(g_proc_reader.buffer, read_size, start, end);
}
